@@ -1,3 +1,11 @@
+2018-10-11  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	* dvispc.c: Support page-independence even with long
+	specials. Use MAX_... constants for error messages.
+	* dvispc.test: Test long specials.
+	* tests/longspec.{tex,dvi}, tests/longspecout.dvi: New tests.
+	* Makefile.am: Adjusted.
+
 2018-10-10  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	* dvispc.c: Clean up code, more comments. Mostly revert
